[package]
name = "supportbridge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.22"
serde = { version="1.0.204", features=["std", "derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt", "sync", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.23.1", features = ["default"] } 
tungstenite = { version = "0.23.0", features = ["default"] }
url = "2.5.2"

[features]
default = ["native-tls"]
native-tls = ["tokio-tungstenite/native-tls", "tungstenite/native-tls"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots", "tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots", "tungstenite/rustls-tls-webpki-roots"]